Wed Jun 23 12:40:40 1993  Linus Tolke Y  (linus@bodil.lysator.liu.se)

	* swedish-string.el (lyskom-mode-map, lyskom-edit-mode-map):
	  emacs-19 way of giving commands.

	* vars.el, command2.el, swedish-strings.el (kom-next-kom): New
	  command, rotating through several lyskoms.

	* commands2.el (kom-bury): buggfix, could hang

Fri Jun 18 12:33:32 1993  Linus Tolke Y  (linus@bodil.lysator.liu.se)

	* commands2.el, swedish-strings.el (kom-bury): New command.
	  Hides a lyskom-session. ("z")

Tue Jun  1 21:27:09 1993  Linus Tolke Y  (linus@mauritz.lysator.liu.se)

	* completing-read.el, edit-text.el, lyskom-rest.el
	  (unread-command-event): (boundp 'unread-command-event) is
	  used instead of (fboundp 'map-keymap) to detect lucid.
	* edit-text.el, completing-read.el (map-keymap): The function
	  called by map-keymap is called with a key event. Not the key
	  sequence. Now we make it into a sequence before calling
	  define-key. Now works with lucid and emacs19 with and
	  without the lucid compatibility library.

Sat May 29 00:15:14 1993  Linus Tolke Y  (linus@mauritz)

	* async.el (lyskom-async-new-text): reinserted lost call to
	  lyskom-prefetch-and-print-prompt.

Thu May 27 16:17:18 1993  Linus Tolke Y  (linus@bodil)

	* Distribuerat version 0.36	 	16.00

Tue May 25 17:47:28 1993  Linus Tolke Y  (linus@bodil)

	* completing-read.el, edit-text.el: Keymaps look different in
	  emacs19 - special patch updated.

Sat May 22 23:00:27 1993  Linus Tolke Y  (linus@bodil)

	* vars.el, swedish-strings.el (kom-tell-phrases-internal): Entered
	  the default server texts in vars.el, the defvar:ed variable is
	  in the language-dependant part.

Fri May 21 17:34:38 1993  Linus Tolke Y  (linus@bodil)

	* commands1.el (lyskom-mark-text): Cleaning cache of the text-stat.

Tue May 11 16:47:38 1993  Linus Tolke Y  (linus@bodil)

	* startup.el (lyskom-connect-filter): When emacs is collecting
	  longer initial package from the server we hang. Fixed using a